# pathetic.rs

./: Cargo.toml  Pipfile  README.md  example.py  fractal.py  test.py
.github/workflows/: rust.yml
pathetic_derive/: Cargo.toml
pathetic_derive/src/: lib.rs
src/: lib.rs  main.rs  scene.rs  things.rs
