[package]
name = "pathetic"
version = "0.1.0"
authors = ["Matthias Wolf <m@sushinara.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
rand = "*"
rayon = "*"

pathetic_derive = { path = "pathetic_derive" }
