[package]
name = "pathetic"
version = "0.1.0"
authors = ["Matthias Wolf <m@sushinara.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "*"
rand = "*"
rand_xoshiro = "*"
rayon = "*"

pathetic_derive = { path = "pathetic_derive" }

[dependencies.pyo3]
version = "0.9.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
